--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,37 @@
-html,
 body {
+  background-color: #FAFAFA;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #282733;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  width: 100vw;
+  height: 100vh;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+.btn,
+.primary-btn,
+.secondary-btn,
+.tertiary-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 24px;
+  width: 150px;
+  height: 32px;
+  border: none;
+  border-radius: 4px;
+  background-color: transparent;
 }
-
-* {
-  box-sizing: border-box;
+.primary-btn {
+  background-color: #325BE3;
+  color: #FFFFFF;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.secondary-btn {
+  border: 1px solid #325BE3;
+  color: #325BE3;
+}
+.tertiary-btn {
+  color: #325BE3;
 }
