--- a/components/header/header.less
+++ b/components/header/header.less
@@ -1,6 +1,8 @@
 @import '../../styles/variables.less';
 
 .header {
+  position: sticky;
+  top: 0;
   background-color: @white;
   width: 100%;
   height: 80px;
