TECH-312: Added Table, Table header, Table row components

--- a/styles/Globals.less
+++ b/styles/Globals.less
@@ -26,3 +26,9 @@ body {
 .tertiary-btn:extend(.btn) {
   color: @accents-and-btn;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
