--- a/styles/Variables.less
+++ b/styles/Variables.less
@@ -1,28 +1,31 @@
 // Colors
-@background: #fafafa;
-
-@success: rgb(4, 129, 18);
-@success-5: rgba(4, 129, 18, 5%);
-@success-20: rgba(4, 129, 18, 20%);
-
-@fail: rgb(207, 11, 11);
-@fail-5: rgba(207, 11, 11, 5%);
-@fail-20: rgba(207, 11, 11, 20%);
-
-@text-main: #282733;
-@text-secondary: #646280;
-@text-nav-and-btn: #07003b;
-
 @accents-and-btn: #325be3;
+
+@background: #fafafa;
+@blue-5: rgba(150, 168, 227, 5%);
+@blue-10:rgba (150, 168, 227, 10%);
+@blue-15:rgba (150, 168, 227, 15%);
+@blue-20:rgba (150, 168, 227, 20%);
 
 @charts-grey: #ececec;
 @charts-blue: #6baeff;
 @charts-light: #dfecfc;
 @charts-chips-and-perc: #0a0050;
 
-@white: #ffffff;
+@fail: rgb(207, 11, 11);
+@fail-5: rgba(207, 11, 11, 5%);
+@fail-20: rgba(207, 11, 11, 20%);
+
 @stroke: #dfdfea;
-@blue-5: rgba(150, 168, 227, 5%);
-@blue-10:rgba (150, 168, 227, 10%);
-@blue-15:rgba (150, 168, 227, 15%);
-@blue-20:rgba (150, 168, 227, 20%);
+@success: rgb(4, 129, 18);
+@success-5: rgba(4, 129, 18, 5%);
+@success-20: rgba(4, 129, 18, 20%);
+
+@text-main: #282733;
+@text-secondary: #646280;
+@text-nav-and-btn: #07003b;
+
+@white: #ffffff;
+
+// Heights
+@table-row: 48px;
