--- a/styles/Extends.less
+++ b/styles/Extends.less
@@ -1,3 +1,5 @@
+@import './Variables.less';
+
 .btn {
   display: flex;
   flex-direction: row;
@@ -9,4 +11,15 @@
   border: none;
   border-radius: 4px;
   background-color: transparent;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.table-header-text {
+  font-size: 12px;
+  font-weight: 700;
+  color: @text-secondary;
 }
