TECH-312: Removed icons, changed component's names

--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -41,17 +41,17 @@
   border-bottom: 1px solid #dfdfea;
 }
 
-.product-table-sections:extend(.flex-row) {
+.product-table-content:extend(.flex-row) {
   align-items: center;
   width: 100%;
 }
 
-.product-table-sections > div:extend(.flex-row) {
+.product-table-content > div:extend(.flex-row) {
   width: 25%;
   gap: 10px;
 }
 
-.product-table-sections > div > p {
+.product-table-content > div > p {
   margin: 0;
 }
 
