TECH-313: Added mocked API server and Product name column, also updated unit test

--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -22,6 +22,11 @@
   color: @text-secondary;
 }
 
+.product-table-row-section {
+  max-height: 65vh;
+  overflow-y: scroll;
+}
+
 .product-table-header:extend(.flex-row),
 .product-table-row:extend(.flex-row) {
   align-items: center;
