--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -69,3 +69,39 @@
 .icon-sort {
   font-size: initial;
 }
+
+.table-bb-section {
+  display: flex;
+  align-items: center;
+}
+
+.table-bb-image {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  width: 60%;
+  height: 48px;
+  overflow: hidden;
+}
+.bb-image {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  filter: invert(30%) sepia(96%) saturate(2946%) hue-rotate(221deg)
+    brightness(92%) contrast(94%);
+}
+
+.overflow-count {
+  display: flex;
+  align-items: center;
+  height: 48px;
+  background-color: @blue-10;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+}
+
+.overflow-count > p {
+  margin: auto;
+  color: @accents-and-btn;
+}
