--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -79,12 +79,13 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  gap: 10px;
-  width: 60%;
+  width: 65%;
   height: 48px;
   overflow: hidden;
 }
+
 .bb-image {
+  padding-right: 10px;
   padding-top: 15px;
   padding-bottom: 15px;
   filter: invert(30%) sepia(96%) saturate(2946%) hue-rotate(221deg)
