TECH-315: Added Last Update row content and unit test

--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -74,7 +74,6 @@
   display: flex;
   align-items: center;
 }
-
 .table-bb-section > div:first-of-type:extend(.flex-row) {
   width: 100%;
   align-items: center;
@@ -109,4 +108,8 @@
 .overflow-count > p {
   margin: auto;
   color: @accents-and-btn;
+}
+
+.product-last-update {
+  color: @text-secondary;
 }
