--- a/styles/Variables.less
+++ b/styles/Variables.less
@@ -6,6 +6,7 @@
 @blue-10: rgba(150, 168, 227, 10%);
 @blue-15: rgba(150, 168, 227, 15%);
 @blue-20: rgba(150, 168, 227, 20%);
+@blue-d-1: rgba(240, 246, 255, 1);
 
 @charts-grey: #ececec;
 @charts-blue: #6baeff;
