--- a/styles/Extends.less
+++ b/styles/Extends.less
@@ -23,3 +23,10 @@
   font-weight: 700;
   color: @text-secondary;
 }
+
+.table-row {
+  background-color: @white;
+  border-left: 1px solid #dfdfea;
+  border-right: 1px solid #dfdfea;
+  border-bottom: 1px solid #dfdfea;
+}
