TECH-316: Add "Overall Compatibility" column to the Products table (#22)
* TECH-319: Added sub table and changed css styles

* TECH-319: Added unit tests

* TECH-316: Added new field to the mocked data

* TECH-316: Added overall compatibility column

* TECH-316: Added compatibility field to the mocked data

* TECH-316: Changed compatibility % to the integer

--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -45,7 +45,7 @@
 }
 
 .product-table-row {
-  width: 100%;
+  width: calc(100% + 15px);
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 4fr 4fr 4fr 4fr 2fr;
