TECH-317: Add infinite scroll to the Products table (#23)
* TECH-413: Added title and description to the page

* TECH-413: Added react-markdown intead of dangerouslySetInnerHTML

* TECH-317: Added Infinite scroll to the table

* TECH-317: Updated snapshot

* TECH-317: Moved scroll loader message to rhe separate component

--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -23,9 +23,8 @@
 }
 
 .product-table-row-section:extend(.table-row) {
-  max-height: 65vh;
+  max-height: 60vh;
   overflow-y: scroll;
-  overflow-x: hidden;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -114,4 +113,8 @@
 
 .product-last-update {
   color: @text-secondary;
+}
+
+.data-loader-message {
+  text-align: center;
 }
