TECH-414: Initial commit

--- a/styles/Variables.less
+++ b/styles/Variables.less
@@ -1,7 +1,7 @@
 // Colors
 @accents-and-btn: #325be3;
 
-@background: #fafafa;
+@background-page: #fcfdff;
 @blue-5: rgba(150, 168, 227, 5%);
 @blue-10: rgba(150, 168, 227, 10%);
 @blue-15: rgba(150, 168, 227, 15%);
