--- a/styles/Globals.less
+++ b/styles/Globals.less
@@ -2,7 +2,7 @@
 @import '../styles/Extends.less';
 
 body {
-  background-color: @background;
+  background-color: @background-page;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: 400;
@@ -31,6 +31,52 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.test-result-page {
+  width: 70vw;
+  display: flex;
+  flex-direction: column;
+  padding-top: 25px;
+  gap: 10px;
+  // background-color: #fcfdff;
+}
+
+.back-to-home-page-btn {
+  width: max-content;
+  // height: 16px;
+  color: @accents-and-btn;
+  background-color: transparent;
+  border: none;
+  font-size: 12px;
+  text-align: center;
+  padding: 0;
+}
+
+.back-to-home-page-btn:first-letter {
+  padding-bottom: 5px;
+  vertical-align: middle;
+}
+
+.test-result-title {
+  display: flex;
+  flex-direction: row;
+  font-size: 18px;
+  font-weight: 700;
+  padding-top: 20px;
+  padding-bottom: 16px;
+}
+
+.test-result-title > p {
+  margin: 0;
+}
+
+.test-result-title > p:first-of-type {
+  padding-right: 4px;
+}
+
+.quote {
+  font-size: 5px;
 }
 
 .text-tooltip .text-tooltip-body {
