--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -14,6 +14,7 @@
   height: 52px;
   display: flex;
   align-items: center;
+  gap: 5px;
 }
 
 .table-results-count > p {
@@ -117,4 +118,13 @@
 
 .data-loader-message {
   text-align: center;
+}
+
+.table-error-handling:extend(.table-row) {
+  display: flex;
+  width: 100%;
+  height: @table-row;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
