--- a/components/table/SubTable.less
+++ b/components/table/SubTable.less
@@ -23,6 +23,7 @@
   grid-template-columns: 1fr 8fr 4fr 4fr 2fr;
   grid-template-rows: 48px;
   align-items: center;
+  text-transform: capitalize;
 }
 
 .sub-table-row:hover {
