TECH-414: Added unit tests, updated snapshots, changed page path

--- a/styles/Globals.less
+++ b/styles/Globals.less
@@ -39,23 +39,13 @@ main {
   flex-direction: column;
   padding-top: 25px;
   gap: 10px;
-  // background-color: #fcfdff;
 }
 
 .back-to-home-page-btn {
   width: max-content;
-  // height: 16px;
   color: @accents-and-btn;
-  background-color: transparent;
-  border: none;
   font-size: 12px;
-  text-align: center;
-  padding: 0;
-}
-
-.back-to-home-page-btn:first-letter {
-  padding-bottom: 5px;
-  vertical-align: middle;
+  text-decoration: none;
 }
 
 .test-result-title {
