--- a/components/table/SubTable.less
+++ b/components/table/SubTable.less
@@ -49,6 +49,7 @@
 .test-details-arrow {
   width: 24px;
   height: 24px;
+  justify-self: center;
   background-color: @blue-10;
   border-radius: 4px;
   color: @accents-and-btn;
