TECH-415: Removed globally margin from <p> tag

--- a/components/TestSummary.less
+++ b/components/TestSummary.less
@@ -3,7 +3,7 @@
 .test-summary-component {
   width: 100%;
   background-color: #fafbff;
-  border: 1px solid #dfdfea;
+  border: 1px solid @stroke;
   border-radius: 8px;
   padding: 24px;
 }
@@ -19,10 +19,6 @@
 .test-summary-header {
   color: @text-secondary;
   padding-bottom: 10px;
-}
-
-.test-summary-label p {
-  margin: 0;
 }
 
 .test-summary-label {
