--- a/styles/Globals.less
+++ b/styles/Globals.less
@@ -69,6 +69,10 @@ main {
   font-size: 5px;
 }
 
+p {
+  margin: 0;
+}
+
 .text-tooltip .text-tooltip-body {
   background-color: @charts-chips-and-perc;
   border-radius: 1px solid 5%;
