TECH-499: Changed name od tooltip component, added offset to tooltip to have one height of tooltips, updated snapshot

--- a/styles/Globals.less
+++ b/styles/Globals.less
@@ -33,7 +33,7 @@ main {
   align-items: center;
 }
 
-.global-tooltip .global-tooltip-xx {
+.text-tooltip .text-tooltip-body {
   background-color: @charts-chips-and-perc;
   border-radius: 1px solid 5%;
   text-transform: capitalize;
