--- a/components/table/TestResultTable.less
+++ b/components/table/TestResultTable.less
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 16px;
+  padding-bottom: 16px;
   gap: 16px;
 }
 
@@ -26,7 +27,7 @@
   border: 1px solid @stroke;
   border-radius: 8px 8px 0px 0px;
   align-items: center;
-  position: sticky;
+  // position: sticky;
   background-color: #fafbff;
 }
 
@@ -40,6 +41,7 @@
   border-right: 1px solid @stroke;
   border-left: 1px solid @stroke;
   align-items: center;
+  color: @text-secondary;
 }
 
 .test-table-row:hover {
@@ -52,17 +54,16 @@
   height: 22px;
   border-radius: 4px;
   line-height: 22px;
+  padding: 4px 8px;
 }
 
 .test-table-row-status {
-  padding: 4px 8px;
   font-size: 12px;
 }
 
 .test-table-row-category {
   background-color: @background-category;
   color: @accents-and-btn;
-  padding: 4px 4px;
   font-size: 10px;
 }
 
@@ -75,3 +76,8 @@
   background-color: @success-backround;
   color: @success;
 }
+
+// .xx {
+//   height: 50%;
+//   overflow: scroll;
+// }
