TECH-415: Added tooltip for overflowing text, hidden overflowed text, updated TextTooltip component

--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -127,3 +127,10 @@
   text-align: center;
   justify-content: center;
 }
+
+.bb-icon-tooltip {
+  background-color: @charts-chips-and-perc;
+  text-transform: capitalize;
+  font-size: 14px;
+  padding: 5px 16px;
+}
