--- a/styles/Globals.less
+++ b/styles/Globals.less
@@ -74,10 +74,6 @@ p {
 }
 
 .text-tooltip .text-tooltip-body {
-  background-color: @charts-chips-and-perc;
   border-radius: 1px solid 5%;
-  text-transform: capitalize;
-  font-size: 14px;
-  padding: 5px 16px;
-  max-width: 300px;
+  max-width: 40vw;
 }
