--- a/components/table/TestResultTable.less
+++ b/components/table/TestResultTable.less
@@ -27,7 +27,6 @@
   border: 1px solid @stroke;
   border-radius: 8px 8px 0px 0px;
   align-items: center;
-  // position: sticky;
   background-color: #fafbff;
 }
 
@@ -67,6 +66,16 @@
   font-size: 10px;
 }
 
+.test-table-row-endpoint {
+  overflow: hidden;
+}
+
+.test-table-row-endpoint > p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .status-failed {
   background-color: @fail-background;
   color: @fail;
@@ -77,7 +86,12 @@
   color: @success;
 }
 
-// .xx {
-//   height: 50%;
-//   overflow: scroll;
-// }
+.row-endpoint-tooltip {
+  overflow-wrap: anywhere;
+  background-color: @background-page;
+  color: @text-secondary;
+  font-size: 12px;
+  padding: 10px 16px;
+  box-shadow: 0px 1px 4px @blue-20;
+  border: 1px solid @blue-20;
+}
