TECH-416: Added component for list of test scenarios

--- a/styles/Variables.less
+++ b/styles/Variables.less
@@ -8,6 +8,7 @@
 @blue-15: rgba(150, 168, 227, 15%);
 @blue-20: rgba(150, 168, 227, 20%);
 @blue-d-1: rgba(240, 246, 255, 1);
+@blue-dark: rgba(7, 0, 59, 1);
 
 @charts-grey: #ececec;
 @charts-blue: #6baeff;
@@ -33,3 +34,4 @@
 
 // Heights
 @table-row: 48px;
+@header-height: 80px;
