--- a/components/header/Header.less
+++ b/components/header/Header.less
@@ -5,7 +5,7 @@
   top: 0;
   background-color: @white;
   width: 100%;
-  height: 80px;
+  height: @header-height;
   display: flex;
   align-items: center;
   border-bottom: 1px solid #c4c4c4;
