--- a/styles/Globals.less
+++ b/styles/Globals.less
@@ -34,11 +34,44 @@ main {
 }
 
 .test-result-page {
-  width: 70vw;
+  width: 100vw;
+  height: calc(100vh - @header-height);
   display: flex;
-  flex-direction: column;
-  padding-top: 25px;
+  flex-direction: row;
   gap: 10px;
+}
+
+.test-result-primary-section {
+  max-width: 50%;
+  margin: 25px auto;
+}
+
+.test-result-second-section {
+  width: 40vw;
+  height: 100%;
+  border: 1px solid #dfdfea;
+  background-color: @white;
+  overflow-y: auto;
+}
+
+.test-result-second-section-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: rgba(242, 246, 252, 1);
+  padding: 24px 20px;
+  color: @blue-dark;
+}
+
+.test-result-second-section-text {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  padding-top: 3px;
+}
+
+.close-icon {
+  font-size: 24px;
 }
 
 .back-to-home-page-btn {
