TECH-416: Fixed css styles

--- a/components/table/SubTable.less
+++ b/components/table/SubTable.less
@@ -3,8 +3,7 @@
 
 .sub-table {
   font-size: 12px;
-  // plus 15px because of scroll width
-  width: calc(100% + 15px);
+  width: 100%;
 }
 
 .sub-table-header {
