--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -44,7 +44,7 @@
 }
 
 .product-table-row {
-  width: calc(100% + 15px);
+  width: calc(100%);
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 4fr 4fr 4fr 4fr 2fr;
