--- a/styles/Globals.less
+++ b/styles/Globals.less
@@ -35,7 +35,7 @@ main {
 
 .test-result-page {
   width: 100vw;
-  height: calc(100vh - @header-height - 5px);
+  height: calc(100vh - @header-height - 2px);
   display: flex;
   flex-direction: row;
   gap: 10px;
@@ -44,7 +44,7 @@ main {
 
 .test-result-primary-section {
   width: 100%;
-  margin: 25px 0;
+  margin: 25px 0 0 0;
 }
 
 .test-result-primary-section > div {
@@ -52,11 +52,12 @@ main {
   min-width: 55vw;
   max-width: 1000px;
   padding: 0 20px;
-  height: calc(100vh - 90px);
+  height: 100%;
 }
 
 .test-result-second-section {
   min-width: 40vw;
+  max-width: 40vw;
   height: 100%;
   border: 1px solid #dfdfea;
   background-color: @white;
@@ -67,6 +68,7 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   background-color: rgba(242, 246, 252, 1);
   padding: 24px 20px;
   color: @blue-dark;
@@ -77,6 +79,7 @@ main {
   flex-direction: row;
   gap: 5px;
   padding-top: 3px;
+  word-break: break-all;
 }
 
 .close-icon {
