TECH-418: Added sorting to the Product table

--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -43,6 +43,11 @@
   position: sticky;
 }
 
+.product-table-header > div {
+  display: flex;
+  gap: 11px;
+}
+
 .product-table-row {
   width: calc(100%);
   height: 100%;
