TECH-514: Added 'search; to translations, moved css style to the classNames inside async select

--- a/styles/Variables.less
+++ b/styles/Variables.less
@@ -20,6 +20,7 @@
 @fail-20: rgba(207, 11, 11, 20%);
 @fail-background: rgba(248, 218, 218, 0.5);
 
+@selected-product: rgba(242, 246, 252, 1);
 @stroke: rgba(223, 223, 234, 1);
 @success: rgb(4, 129, 18);
 @success-5: rgba(4, 129, 18, 5%);
