--- a/styles/Globals.less
+++ b/styles/Globals.less
@@ -69,7 +69,7 @@ main {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(242, 246, 252, 1);
+  background-color: @selected-product;
   padding: 24px 20px;
   color: @blue-dark;
 }
