TECH-418: Added multiple sorting option, updated snapshots and unit test

--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -46,6 +46,12 @@
 .product-table-header > div {
   display: flex;
   gap: 11px;
+  align-items: center;
+  cursor: default;
+}
+
+.product-table-header > div.cursor-pointer {
+  cursor: pointer;
 }
 
 .product-table-row {
