TECH-420: Added sorting to the Result Table

--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -134,3 +134,24 @@
   font-size: 14px;
   padding: 5px 16px;
 }
+
+.sort-icon {
+  font-size: 22px;
+  display: flex;
+  flex-direction: column;
+  color: #dfdfea;
+}
+
+.sort-icon-up {
+  top: 8px;
+  position: relative;
+}
+
+.sort-icon-down {
+  top: -8px;
+  position: relative;
+}
+
+.sort-icon-active {
+  color: @text-secondary;
+}
