--- a/components/table/TestResultTable.less
+++ b/components/table/TestResultTable.less
@@ -37,6 +37,13 @@
   background-color: #fafbff;
 }
 
+.test-table-header > div {
+  display: flex;
+  gap: 11px;
+  align-items: center;
+  cursor: pointer;
+}
+
 .test-table-row-container {
   overflow-y: scroll;
   height: calc(100% - 50px);
