--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -33,7 +33,7 @@
 }
 
 .product-table-header:extend(.table-header-text) {
-  width: 100%;
+  width: calc(100% - 15px);
   display: grid;
   grid-template-columns: 1fr 4fr 4fr 4fr 4fr 2fr;
   grid-template-rows: 48px;
@@ -55,7 +55,7 @@
 }
 
 .product-table-row {
-  width: calc(100%);
+  width: 100%;
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 4fr 4fr 4fr 4fr 2fr;
