--- a/components/table/ProductTable.less
+++ b/components/table/ProductTable.less
@@ -33,7 +33,7 @@
 }
 
 .product-table-header:extend(.table-header-text) {
-  width: calc(100% - 15px);
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 4fr 4fr 4fr 4fr 2fr;
   grid-template-rows: 48px;
@@ -129,6 +129,28 @@
 .data-loader-message {
   text-align: center;
 }
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+}
+
+.loader {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #dfdfea;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 
 .table-error-handling:extend(.table-row) {
   display: flex;
