--- a/components/TestSummary.less
+++ b/components/TestSummary.less
@@ -15,6 +15,16 @@
   gap: 5px;
 }
 
+.tooltipTriggerArea {
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  width: 50%;
+  height: 50%;
+  z-index: 2; /* Ensure it's above the BBImage */
+  pointer-events: none; /* Ensures that interactions pass through this div to underlying content */
+}
+
 .test-summary-header {
   color: @text-secondary;
   padding-bottom: 10px;
