TECH-864: Added nav bar menu

--- a/src/components/header/Header.less
+++ b/src/components/header/Header.less
@@ -13,10 +13,38 @@
 }
 
 .header-logo {
+  display: flex;
+  align-items: center;
   padding-left: 3%;
+  padding-right: 10%;
+  height: inherit;
 }
 
 .header-logo > img {
   width: 90px;
   height: 80%;
+}
+
+.header-right-section {
+  width: 100%;
+  height: inherit;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
+.header-link-button-section {
+  display: flex;
+}
+
+.header-link-button-section > a {
+  margin: 0;
+  text-decoration: none;
+}
+
+.header-help-section {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  gap: 4px;
 }
