--- a/src/styles/Variables.less
+++ b/src/styles/Variables.less
@@ -9,6 +9,7 @@
 @blue-20: rgba(150, 168, 227, 20%);
 @blue-d-1: rgba(240, 246, 255, 1);
 @blue-dark: rgba(7, 0, 59, 1);
+@blue-lightest: rgba(250, 251, 255, 1);
 
 @charts-grey: #ececec;
 @charts-blue: #6baeff;
