TZUP-864: commented code that should have been added in another task

--- a/src/components/header/Header.less
+++ b/src/components/header/Header.less
@@ -42,9 +42,10 @@
   text-decoration: none;
 }
 
-.header-help-section {
-  display: flex;
-  align-items: center;
-  height: 100%;
-  gap: 4px;
-}
+// should be added in the scope of TECH-957
+// .header-help-section {
+//   display: flex;
+//   align-items: center;
+//   height: 100%;
+//   gap: 4px;
+// }
