--- a/frontend/components/table/Table.less
+++ b/frontend/components/table/Table.less
@@ -1,4 +1,3 @@
-
 @import '../../styles/Variables.less';
 @import '../../styles/Extends.less';
 
@@ -11,6 +10,7 @@ table.main-table {
     height: 48px;
     text-align: left;
     width: 100%;
+    background-color: @blue-lightest;
 
     th {
       padding: 0 10px 0 10px;
